--- a/style.css
+++ b/style.css
@@ -339,6 +339,7 @@ nav {
 .recent-description{
     color: #0e0e0ec2;
     font-size: 14px;
+    margin-bottom: 30px;
 }
 .first-card{
     display: flex;
@@ -349,6 +350,7 @@ nav {
     align-items: center;
     padding: 48px 56px;
     gap: 32px;
+    margin-bottom: 15px;
 }
 .card-img1 {
     border-radius: 10px; 
@@ -378,4 +380,74 @@ nav {
 }
 .card-content {
     margin-top: 0px;
+}
+.donate{
+    margin: 0px 160px;
+    display: flex;
+    flex-direction: column;
+}
+.text-center {
+    text-align: center;
+}
+
+.donate-list {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+.donate-btn {
+    font-family: "Open Sans", serif;
+    font-size: 30px;
+    padding: 36px;
+    border-radius: 15px;
+    background-color: white;
+    border: none;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.donate-btn:hover {
+    background-color: #C6E4D6;
+    box-shadow: 
+    0 4px 8px rgba(0, 106, 80, 0.3),
+    0 8px 16px rgba(0, 106, 80, 0.2),
+    0 12px 24px rgba(0, 106, 80, 0.1);
+}
+#other-amount {
+    background-color: #ffffff;
+    margin: 10px 124px 0px ;
+    height: 45px;
+    border: none;
+    font-size: 18px;
+
+}
+#other-amount:hover {
+    box-shadow: 0 4px 8px rgba(32, 32, 32, 0.3),
+    0 8px 16px rgba(94, 94, 94, 0.2),
+    0 12px 24px rgba(171, 171, 171, 0.1);
+}
+.donate-now {
+    font-family: "Open Sans", serif;
+    background-color: #006A50;
+    border-radius: 5px;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    width: 120px;
+    margin: 30px 0px;
+    text-align: center;
+    margin-left: 45%;
+    font-weight: bold;
+}
+.donate-now:hover{
+    background-color: #ffffff;
+    color: #006A50;
+    border: 1px solid #006A50;
+    transition: all 0.3s ease;
+    box-shadow: 
+        0 4px 8px rgba(0, 106, 80, 0.3),
+        0 8px 16px rgba(0, 106, 80, 0.2),
+        0 12px 24px rgba(0, 106, 80, 0.1);
 }
