--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-variation-settings: "wdth" 100;
     background-color: #efefef;
 }
+*{
+    margin: 0;
+    padding: 0;
+}
 nav {
     display: flex;
     justify-content: space-between;
@@ -487,4 +491,22 @@ nav {
 .footer-msg{
     font-size: 12px;
     color: #0e0e0ec9;
+    margin-top: 20px;
+}
+.footer-note {
+    margin: 0px;
+    padding: 50px 0px;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.icons{
+    margin-top: 30px;
+    display: flex;
+    gap: 20px;
+}
+.icons img{
+    height: 20px;
 }
